# python-ml-pitch-models

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt
_build/: index.rst
examples/: comparison.ipynb  requirements.txt
readme_src/: README.md  conf.py  index.rst
scripts/: conf_cuda.py  generate_readme.py  h5_2d_to_1d.py  requirements.txt
src/fcn_f0/: layers.py  models.py  pretrained.py
src/ml_pitch_models/: __init__.py  layers.py  models.py  pretrained.py  stap.py  utils.py
tests/: test_crepe.py  test_fcn.py  test_fcn_viterbi.py  test_prepare.py  test_pretrained.py
