[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ml-pitch-models"
description = "Machine-learning models for monophonic pitch (F0) estimation"
readme = "README.md"
keywords = []
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    'Topic :: Multimedia :: Sound/Audio :: Analysis',
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["numpy", "tensorflow", "hmmlearn"]

[project.urls]
Repository = "https://github.com/tikuma-lsuhsc/python-ml-pitch-models"

[tool.setuptools.dynamic]
version = { attr = "ml_pitch_models.__version__" }

[project.optional-dependencies]
ALL_WEIGHTS = [
    "ml-pitch-models-data-fcn-929",
    "ml-pitch-models-data-fcn-993",
    "ml-pitch-models-data-fcn-1953",
    "ml-pitch-models-data-crepe-full",
    "ml-pitch-models-data-crepe-large",
    "ml-pitch-models-data-crepe-medium",
    "ml-pitch-models-data-crepe-small",
    "ml-pitch-models-data-crepe-tiny",
]
FCN_WEIGHTS = [
    "ml-pitch-models-data-fcn-929",
    "ml-pitch-models-data-fcn-993",
    "ml-pitch-models-data-fcn-1953",
]
CREPE_WEIGHTS = [
    "ml-pitch-models-data-crepe-full",
    "ml-pitch-models-data-crepe-large",
    "ml-pitch-models-data-crepe-medium",
    "ml-pitch-models-data-crepe-small",
    "ml-pitch-models-data-crepe-tiny",
]
DEFAULT_WEIGHTS = ["ml-pitch-models-data-fcn-993"]
FCN_1953_WEIGHTS = ["ml-pitch-models-data-fcn-1953"]
FCN_993_WEIGHTS = ["ml-pitch-models-data-fcn-993"]
FCN_929_WEIGHTS = ["ml-pitch-models-data-fcn-929"]
CREPE_FULL_WEIGHTS = ["ml-pitch-models-data-crepe-full"]
CREPE_LARGE_WEIGHTS = ["ml-pitch-models-data-crepe-large"]
CREPE_MEDIUM_WEIGHTS = ["ml-pitch-models-data-crepe-medium"]
CREPE_SMALL_WEIGHTS = ["ml-pitch-models-data-crepe-small"]
CREPE_TINY_WEIGHTS = ["ml-pitch-models-data-crepe-tiny"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# minversion = "6.0"
# addopts = "-ra -q"
